--- a/Style.css
+++ b/Style.css
@@ -1,23 +1,22 @@
+.masthead {
+  height: 100vh;
+  min-height: 500px;
+
+  background-size: cover;
+  background-image: url('Images/NewCover.jpeg');
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.adjust{
+	margin-top: 30px;
+	margin-bottom: 30px;
+}
 .adjusttop{
 	margin-top: 30px;
 }
 .adjustbottom{
 	margin-bottom: 30px;
-}
-.und {
-	border-radius: 10px;
-	width: 150px;
-	padding: 0px;
-	border: 1px solid #bac2c2;
-	background-color: #bac2c2;
-	margin: 0;
-}
-.ind {
-	border-top-left-radius: 10px;
-	width: 80px;
-	padding: 0px;
-	border: 1px solid #2584a1;
-	margin: 0;
 }
 
 #container
@@ -33,6 +32,8 @@
 }
 
 .style-two {
+	margin-top: 30px;
+	margin-bottom: 30px;
 	border-color: gray;
     border: 0;
     height: 1px;
@@ -46,67 +47,25 @@
   width: 50%;
 }
 
+
+
 body{
 	background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQM5tHcYhnXfOtLXDQpevPP1K-tWtkhFXyD4Q&usqp=CAU");
 	background-attachment: fixed;
 }
 
-
-
-
-
-
-
-
-
-/*.coverContainer {
-    margin: 0px;
-    width: 100%;
-    height: 11rem;
-    background-image: url("Images/CoverPage.png");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-}*/
-
-/*#intro
-{
-	background: url("Images/CoverPage.png");
-	height: 100%;
+.title-1{
+    font-weight: 700;
+    display: inline-block;
+    margin-bottom: 30px;
+}
+.title-1::after{
+    content: "";
+    width: 50%;
+    height: 4px;
+    display: block;
+    background-color: #246799;
+    border-right: 40px solid #DDDDDD;
 }
 
 
-.masthead {
-  height: 100vh;
-  min-height: 500px;
-  background-image: url('img-fluid" src="https://images.unsplash.com/photo-1506606401543-2e73709cebb4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-.full-width-image {
-   width: 100vw;
-   position: relative;
-   left: 50%;  
-   margin-left: -50vw;
-}
-
-.full-width-image img {
-  width: 100%;
-}
-
-.coverContainer {
-    width: 100%;
-    height: 3rem;
-}
-
-.coverImage {
-    height: 100%;
-    width: 100%
-}
-
-body {
-    height: 100%;
-    width: 98%;
-}*/
